--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
