--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "remark-gfm": "^4.0.1",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "webm-duration-fix": "^1.0.4",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
