--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
+    "react-currency-mask": "^1.3.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
