--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@rocketseat/eslint-config": "^2.2.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "apexcharts": "^5.3.5",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +34,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.8.0",
     "react-currency-mask": "^1.3.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.64.0",
